@startuml Figure10_Diagramme_Classes_Gestion_Immobiliere

' ==============================================================================
' Figure 10 : Diagramme de classes – Gestion immobilière
' ==============================================================================

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam packageStyle rectangle

skinparam class {
    BackgroundColor #FFFFFF
    BorderColor #2B6CB0
    HeaderBackgroundColor #EBF4FF
    ArrowColor #2D3748
    FontName Arial
}

class Agence {
    - id : bigint
    - user_id : bigint
    - nom_agence : string
    - adresse : string
    - quartier_id : bigint
    - description : text
    - logo : string
    - statut_validation : boolean
    - bloque : boolean
    + biens()
    + propositions()
}

class BienImmobilier {
    - id : bigint
    - agence_id : bigint
    - quartier_id : bigint
    - titre : string
    - type_bien : TypeBienEnum
    - type_contrat : TypeContratEnum
    - prix : decimal
    - surface : decimal
    - nombre_chambres : integer
    - nombre_salles_bain : integer
    - parking_disponible : boolean
    - est_meuble : boolean
    - description : text
    - statut : boolean
    + agence()
    + quartier()
    + medias()
    + propositions()
}

class Media {
    - id : bigint
    - agence_id : bigint
    - mediable_id : bigint
    - mediable_type : string
    - fichier : string
    + agence()
    + mediable()
}

class DemandeImmobiliere {
    - id : bigint
    - particulier_id : bigint
    - quartier_id : bigint
    - type_operation : TypeOperationEnum
    - type_bien : TypeBienEnum
    - budget_maximum : decimal
    - zone_recherchee : string
    - statut : StatutDemandeEnum
    + particulier()
    + quartier()
    + propositions()
}

class Proposition {
    - id : bigint
    - demande_id : bigint
    - agence_id : bigint
    - bien_id : bigint
    - particulier_id : bigint
    - prix_propose : decimal
    - message : text
    - statut : StatutPropositionEnum
    + demande()
    + agence()
    + bien()
    + particulier()
}

class Quartier {
    - id : bigint
    - nom : string
    - ville : string
    - est_actif : boolean
    + biens()
    + demandes()
}

' --- Relations & Multiplicités ---
Agence "1" -- "0..*" BienImmobilier
BienImmobilier "1" -- "0..*" Media
Agence "1" -- "0..*" Media

DemandeImmobiliere "1" -- "0..*" Proposition
BienImmobilier "1" -- "0..*" Proposition
Agence "1" -- "0..*" Proposition

Quartier "1" -- "0..*" BienImmobilier
Quartier "1" -- "0..*" DemandeImmobiliere

@endluml
